[project]
name = "dlextract"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    #    "black>=25.12.0",
    "httpx>=0.28.1",
    "py7zr>=1.1.0",
    "rarfile>=4.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.2",
]
